RESOLVED FIXED179456
ServiceWorkerRegistration::updateStateFromServer fix! (Don't always create a new ServiceWorker every time)
https://bugs.webkit.org/show_bug.cgi?id=179456
Summary ServiceWorkerRegistration::updateStateFromServer fix! (Don't always create a ...
Brady Eidson
Reported 2017-11-08 16:37:04 PST
ServiceWorkerRegistration::updateStateFromServer fix!
Attachments
Patch (1.96 KB, patch)
2017-11-08 16:39 PST, Brady Eidson
no flags
Brady Eidson
Comment 1 2017-11-08 16:37:32 PST
ServiceWorkerRegistration::updateStateFromServer fix! (Don't always create a new ServiceWorker every time)
Brady Eidson
Comment 2 2017-11-08 16:39:39 PST
Brady Eidson
Comment 3 2017-11-08 16:41:27 PST
Chris reviewed in person
WebKit Commit Bot
Comment 4 2017-11-08 17:13:30 PST
Comment on attachment 326403 [details] Patch Clearing flags on attachment: 326403 Committed r224611: <https://trac.webkit.org/changeset/224611>
WebKit Commit Bot
Comment 5 2017-11-08 17:13:32 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 6 2017-11-15 09:38:46 PST
Note You need to log in before you can comment on or make changes to this bug.