ServiceWorkerRegistration::updateStateFromServer fix! (Don't always create a new ServiceWorker every time). https://bugs.webkit.org/show_bug.cgi?id=179456

Reviewed by Chris Dumez.

No new tests (No behavior change yet).

* workers/service/ServiceWorkerRegistration.cpp:
(WebCore::ServiceWorkerRegistration::updateStateFromServer): Re-use a previous worker instead of always creating a new one.


Canonical link: https://commits.webkit.org/195510@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@224611 268f45cc-cd09-0410-ab3c-d52691b4dbfc